--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -13,10 +13,6 @@
     font-weight: 100;
 }
 
-p, .name {
-    /* color: #202020; */
-}
-
 .face {
     height: 180px;
     border-radius: 4px;
