--- a/src/views/sidebar/sidebar.css
+++ b/src/views/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 #sidebar-links {
     list-style: none;
     border-right: 1px solid black;
-    border-image: linear-gradient(to bottom, #002156, white) 1 100%;
+    border-image: linear-gradient(to bottom, #ccc, #fff) 1 100%;
     padding-bottom: 5em;
     padding-right: 3em;
 }
@@ -16,8 +16,5 @@ a {
 }
 
 .active-nav-link {
-    padding-left: 3px;
-    border-left: 3px solid #444;
-    border-radius: 3px;
     color: #444;
 }
